--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compileOnly 'com.google.android.things:androidthings:+'
 
     //driver
-    compile 'com.google.android.things.contrib:driver-rainbowhat:0.8'
+    implementation 'com.google.android.things.contrib:driver-rainbowhat:0.8'
+
+    implementation 'com.google.android.things.contrib:driver-pwmservo:0.3'
 }
